Wrote warped product set up.

--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,10 @@
 \begin{document}
 
 \title[]
- {}
+ {Blow up of equivariant harmonic map heat flow and Yang Mills flow}
 
 \curraddr{}
 \email{}
-\date{\today}
 
 \dedicatory{}
 \subjclass[2010]{}
@@ -23,5 +22,35 @@
 \section{Introduction}
 \label{sec:intro}
 
+Consider a warped product metric of the form,
+\[
+ds^2 = du^2 + g(u)^2 d\phi^2
+\]
+on $M = (0, a) \times (0, 2\pi)$. The metric extends smoothly to an open disc of radius $a > 0$ in $\R^2$ provided
+\[
+\begin{cases}
+g(0) &= 0 \\
+g'(0) &= 1 \\
+g(-u) &= - g(u).
+\end{cases}
+\]
+If in addition,
+\[
+\begin{cases}
+g(a) &= 0 \\
+g'(a) &= -1 \\
+\end{cases}
+\]
+the the metric extends smoothly to $\S^2$. If $g'(a) \ne 0$, then we still obtain a metric on $\S^2$ but with a conical singularity at $a$.
+
+We consider maps
+\[
+f : B \times [0, T) \to (\S^2, ds^2)
+\]
+where $B \subset \R^2$ is the unit ball equipped with the flat metric. Let us write $(r, \theta)$ for polar coordinates on $\R^2$ identifying $B$ with $((0, 1) \times (0, 2\pi), dr^2 + r^2 d\theta^2)$. For a non-zero natural number \(\ell \in \N\), we say $f$ is \emph{degree $\ell$-equivariant} if
+\[
+f (r, \theta, t) = (\psi(r, t), \ell\theta (\operatorname{mod} 2\pi)).
+\]
+for some smooth $\psi : (0, 1) \times [0, T) \to (0, a)$.
 
 \end{document}
