Wrote comparison theorem.

--- a/main.tex
+++ b/main.tex
@@ -53,4 +53,135 @@ f (r, \theta, t) = (\psi(r, t), \ell\theta (\operatorname{mod} 2\pi)).
 \]
 for some smooth $\psi : (0, 1) \times [0, T) \to (0, a)$ with \(\psi(0, t) = 0\) for every \(t \in [0, T)\).
 
+We are interested in the phenomena of \emph{blow-up} of the \emph{harmonic map heat flow}, for which purpose it is sufficient to fix the boundary data, \(\psi(1, t) = \psi_1\) for a real constant \(\psi_1 > 0\). Of course the initial condition for \(f_0(r, \theta) = f(r, \theta, 0)\) is also equivariant so we take initial condition, \(\psi_0\) with \(\psi_0(0) = 0\) and \(\psi_0(1) = \psi_1\).
+
+The harmonic map heat flow with the stated boundary conditions then becomes
+\begin{equation}
+\label{eq:harmonic_map_heat_flow}
+\begin{cases}
+\partial_t \psi &= \psi_{rr} + \frac{1}{r} \psi_r - \frac{\ell^2}{r^2} F(\psi) \\
+\psi(r, 0) &= \psi_0(r) \\
+\psi(0, t) &= 0, \quad \psi(1, t) = \psi_1, \quad t \in [0, T)
+\end{cases}
+\end{equation}
+where \(F(z) = u(z)u'(z)\).
+
+\subsection*{Examples}
+
+\subsubsection*{Harmonic maps into the sphere.}
+
+The round metric on the sphere is
+\[
+ds^2 = dz^2 + \sin^2(z) d\phi^2
+\]
+for \(z \in (0, \pi)\) and where \(d\phi^2\) is the round metric on \(\S^{n-1}\). The corresponding harmonic map heat flow is
+\[
+\partial_t \psi = \psi_{rr} + \frac{n-1}{r} \psi_r - \frac{n-1}{r^2} \frac{1}{2} \sin (2\psi).
+\]
+The so-called \emph{critical dimension} here is \(n=2\) for which the harmonic map heat flow is conformally invariant. In this case,
+\[
+\partial_t \psi = \psi_{rr} + \frac{1}{r} \psi_r - \frac{1}{r^2} \frac{1}{2} \sin (2\psi)
+\]
+and \(F(z) = \tfrac{1}{2} \sin(2z)\) in equation \eqref{eq:harmonic_map_heat_flow}.
+
+\subsubsection*{\(SO(4)\)-equivariant Yang-Mills flow in \(\R^4\).}
+
+Equivariant Yang-Mills flow reduces to
+\[
+\partial_t \psi = \psi_{rr} + \frac{n-3}{r} \psi_r - \frac{2(n-2)}{r^2} \psi(1 - \psi)(1 - \tfrac{1}{2} \psi).
+\]
+
+Here the critical dimension is \(n=4\) for which the Yang-Mills flow is conformally invariant. In this case,
+\[
+\partial_t \psi = \psi_{rr} + \frac{1}{r} \psi_r - \frac{1}{r^2} 4 \psi(1 - \psi)(1 - \tfrac{1}{2} \psi)
+\]
+and \(F(z) = 4 z(1 - z)(1 - \tfrac{1}{2} z)\) in equation \eqref{eq:harmonic_map_heat_flow}.
+
+\section{Comparison Principle}
+
+Our argument is based on a comparison principle. In this section, let us consider the more general equation
+\begin{equation}
+\label{eq:pde}
+\begin{cases}
+\partial_t \psi &= \psi_{rr} + \frac{C_1}{r} \psi_r - \frac{C_2}{r^2} F(\psi) \\
+\psi(r, 0) &= \psi_0(r) \\
+\psi(0, t) &= 0, \quad \psi(1, t) = \psi_1, \quad t \in [0, T)
+\end{cases}
+\end{equation}
+where \(C_1, C_2 > 0\) are real constants and \(F\) is a Lipschitz function that is odd and increasing on some interval \((-\delta, \delta)\) around \(0\). Note that \(F(0) = 0\) since \(F\) is odd. A particular example is any \(C^2\), odd function \(F\) such that \(F(0)\) and \(F'(0) > 0\).
+
+\begin{thm}[Comparison Principle]
+Let \(\psi\) satisfy equation \eqref{eq:pde} and let \(\overline{\xi}\) be a super-solution; that is
+\begin{equation}
+\label{eq:pde_super}
+\begin{cases}
+\partial_t \overline{\xi} &\geq \overline{\xi}_{rr} + \frac{C_1}{r} \overline{\xi}_r - \frac{C_2}{r^2} F(\overline{\xi}) \\
+\overline{\xi}(r, 0) &\geq \psi_0(r) \\
+\overline{\xi}(0, t) &\geq 0, \quad \overline{\xi}(1, t) \geq \psi_1, \quad t \in [0, T).
+\end{cases}
+\end{equation}
+Then \(\psi \leq \overline{\xi}\) for all \(t \in [0, T)\). If on the other hand, \(\underline{\xi}\) satisfies the conditions of equation \eqref{eq:pde_super}, but with all inequalities reversed, then \(\psi \geq \underline{\xi}\).
+\end{thm}
+
+The proof is basically a standard comparison principle, but with a slight adjustment to deal with the singular behaviour of the coefficients \(1/r\) and \(F(\psi(r))/r^2\) near \(r=0\). Note also that the only non-linearity occurs in the lowest order term \(F(\psi(r))/r^2\). These constraints account for the assumptions on \(F\) (see equations \eqref{eq:near_positive} and \eqref{eq:far_positive}).
+
+\begin{proof}
+We only prove the super-solution case, \(\overline{\xi}\). The sub-solution case \(\underline{\xi}\) is similar.
+
+Let \(\varphi = \psi - \overline{\xi}\). Then the initial assumption is \(\varphi(r, 0) \leq 0\) and the claim of the theorem is that \(\varphi(r, t) \leq 0\) for all \(t \in [0, T)\). As usual we argue by contradiction: If the claim is false, then there is a \(\tau > 0\) such that
+\begin{equation}
+\label{eq:false_claim}
+\sup \{\varphi(r, t) : 0 \leq r \leq 1, 0 \leq t \leq \tau\} > 0.
+\end{equation}
+
+Since \(\psi(0, t) = \overline{\xi}(0, t) = 0\), by the regularity of \(\psi\) and \(\overline{\xi}\), there exists a \(\rho > 0\) such that
+\[
+-\delta < \psi, \xi < \delta
+\]
+for \(0 \leq r \leq \rho\) and \(0 \leq t \leq \tau\). By the assumptions \(F(0) = 0\), and \(F\) is odd, increasing on \((-\delta,\delta)\), we must have
+\begin{equation}
+\label{eq:near_positive}
+0 \leq \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}}, \quad (r, t) \in [0, \rho] \times [0, \tau].
+\end{equation}
+Choose any
+\[
+\lambda > \frac{C_2}{\rho^2} \operatorname{Lip} (F) > 0
+\]
+where \(\operatorname{Lip} (F)\) is the Lipschitz constant of \(F\). Then for  \(r \geq \rho\) we have
+\begin{equation}
+\label{eq:far_positive}
+\lambda + \frac{C_2}{r^2} \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}} > \lambda - \frac{C_2}{r^2} \operatorname{Lip} (F) > 0
+\end{equation}
+
+Now we may define
+\[
+h = e^{-\lambda t} \varphi.
+\]
+and apply the usual contradiction argument as follows: The assumptions of the theorem give
+\[
+h(0, t) \leq 0, \quad h(1, t) \leq 0 \quad \text{and} \quad h(r, 0) \leq 0
+\]
+while claiming the conclusion of the theorem is false implies, by equation \eqref{eq:false_claim}, that
+\[
+\sup \{h(r, t) : 0 \leq r \leq 1, 0 \leq t \leq \tau\} > 0.
+\]
+Let \((r_0, t_0) \in (0, 1) \times (0, \tau]\) realise the supremum. Computing, we see that \(h\) satisfies
+\[
+\begin{split}
+\partial_t h &= - \lambda e^{-\lambda t} \varphi + e^{-\lambda t} \partial_t \varphi \\
+&\leq  -\lambda e^{-\lambda t} \varphi + e^{-\lambda t} \left[\psi_{rr} + \frac{C_1}{r} \psi_r - \frac{C_2}{r^2} F(\psi)\right] \\
+&\quad - e^{-\lambda t}\left[\overline{\xi}_{rr} + \frac{C_1}{r} \overline{\xi}_r - \frac{C_2}{r^2} F(\overline{\xi})\right] \\
+&= h_{rr} + \frac{C_1}{r} h_r - \left(\lambda + \frac{C_2}{r^2} \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}}\right) h.
+\end{split}
+\]
+At \((r_0, t_0)\) realising the supremum, \(h(r_0, t_0) > 0\), and hence
+\[
+\lambda + \frac{C_2}{r^2} \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}} \leq \frac{1}{h} \left(h_{rr} + \frac{C_1}{r} h_r - \partial_t h\right) \leq 0.
+\]
+But this gives a contradiction since using equation \eqref{eq:near_positive} for \(r_0 \leq \rho\), and equation \eqref{eq:far_positive} for \(r_0 \geq \rho\) gives
+\[
+\lambda + \frac{C_2}{r^2} \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}} > 0.
+\]
+\end{proof}
+
 \end{document}
