Wrote beginning of blow up including heuristic and outline of origin blow up.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -6596,3 +6596,15 @@ MRREVIEWER = {M. M. Day},
   MRNUMBER = {0190527},
 MRREVIEWER = {W. W. Hooker},
 }
+
+@book {Ladyzhenskaja:/1967,
+    AUTHOR = {Lady\v zenskaja, O. A. and Solonnikov, V. A. and Ural$\prime$ceva, N.
+              N.},
+     TITLE = {{\cyr {L}ine\u\i nye i kvaziline\u\i nye uravneniya parabolicheskogo
+              tipa}},
+ PUBLISHER = {Izdat. ``Nauka'', Moscow},
+      YEAR = {1967},
+     PAGES = {736},
+   MRCLASS = {35.62},
+  MRNUMBER = {0241821},
+}
