--- a/main.tex
+++ b/main.tex
@@ -39,11 +39,11 @@ Such problems arise in studying equivariant \emph{harmonic map heat flow} and eq
 
 \subsubsection*{Harmonic maps into the round sphere.}
 
-The round metric on the sphere is
+The round metric on the sphere \(\S^n\), expressed in polar coordinates \(\S^n \backslash \{\pm p\} \simeq (0, \pi) \times \S^{n-1}\) may be written
 \[
 ds^2 = dz^2 + \sin^2(z) d\phi^2
 \]
-for \(z \in (0, \pi)\) and where \(d\phi^2\) is the round metric on \(\S^{n-1}\). The corresponding harmonic map heat flow is
+for \(z \in (0, \pi)\) and where \(d\phi^2\) is the round metric on \(\S^{n-1}\). The Lie group \(O(n)\) acts on the \(\S^{n-1}\) factor producing a corresponding \(O(n)\)-equivariant harmonic map heat flow,
 \[
 \partial_t \psi = \psi_{rr} + \frac{n-1}{r} \psi_r - \frac{n-1}{r^2} \frac{1}{2} \sin (2\psi).
 \]
@@ -54,7 +54,7 @@ The so-called \emph{critical dimension} here is \(n=2\) for which the harmonic m
 
 \subsubsection*{\(SO(n)\)-equivariant Yang-Mills flow in \(\R^n\).}
 
-Equivariant Yang-Mills flow reduces to
+\(SO(n)\) equivariant Yang-Mills flow on \(\R^n\) reduces to
 \[
 \partial_t \psi = \psi_{rr} + \frac{n-3}{r} \psi_r - \frac{2(n-2)}{r^2} \psi(1 - \psi)(1 - \tfrac{1}{2} \psi).
 \]
@@ -156,33 +156,38 @@ Let \(\psi\) satisfy equation \eqref{eq:pde} and let \(\overline{\xi}\) be a sup
 \begin{cases}
 \partial_t \overline{\xi} &\geq \overline{\xi}_{rr} + \frac{C}{r} \overline{\xi}_r - \frac{1}{r^2} F(\overline{\xi}) \\
 \overline{\xi}(r, 0) &\geq \psi_0(r) \\
-\overline{\xi}(0, t) &\geq 0, \quad \overline{\xi}(1, t) \geq \psi_1, \quad t \in [0, T).
+\overline{\xi}(0, t) &= 0, \quad \overline{\xi}(1, t) \geq \psi_1, \quad t \in [0, T).
 \end{cases}
 \end{equation}
 Then \(\psi \leq \overline{\xi}\) for all \(t \in [0, T)\). If on the other hand, \(\underline{\xi}\) satisfies the conditions of equation \eqref{eq:pde_super}, but with all inequalities reversed, then \(\psi \geq \underline{\xi}\).
 \end{thm}
 
-The proof is basically a standard comparison principle, but with a slight adjustment to deal with the singular behaviour of the coefficients \(1/r\) and \(F(\psi(r))/r^2\) near \(r=0\). Note also that the only non-linearity occurs in the lowest order term \(F(\psi(r))/r^2\). These constraints account for the assumptions on \(F\) (see equations \eqref{eq:near_positive} and \eqref{eq:far_positive}).
+The proof is basically a standard comparison principle, but with a slight adjustment to deal with the singular behaviour of the coefficients \(1/r\) and \(F(\psi(r))/r^2\) near \(r=0\). Note also that the only non-linearity occurs in the lowest order term \(F(\psi(r))/r^2\). These constraints account for the assumptions on \(F\) given in the introduction (see equations \eqref{eq:near_positive} and \eqref{eq:far_positive}).
 
 \begin{proof}
 We only prove the super-solution case, \(\overline{\xi}\). The sub-solution case \(\underline{\xi}\) is similar.
 
-Let \(\varphi = \psi - \overline{\xi}\). Then the initial assumption is \(\varphi(r, 0) \leq 0\) and the claim of the theorem is that \(\varphi(r, t) \leq 0\) for all \(t \in [0, T)\). As usual we argue by contradiction: If the claim is false, then there is a \(\tau > 0\) such that
+Let
+\[
+\varphi = \psi - \overline{\xi}.
+\]
+Then the initial assumption is \(\varphi(r, 0) \leq 0\) and the claim of the theorem is that \(\varphi(r, t) \leq 0\) for all \(t \in [0, T)\). As usual we argue by contradiction: If the claim is false, then there is a \(\tau > 0\) such that
 \begin{equation}
 \label{eq:false_claim}
 \sup \{\varphi(r, t) : 0 \leq r \leq 1, 0 \leq t \leq \tau\} > 0.
 \end{equation}
 
-Since \(\psi(0, t) = \overline{\xi}(0, t) = 0\), by the regularity of \(\psi\) and \(\overline{\xi}\), there exists a \(\rho > 0\) such that
+Before going through the contradiction argument, we first need to handle the singular coefficients at \(r = 0\). Since \(\psi(0, t) = \overline{\xi}(0, t) = 0\), by the regularity of \(\psi\) and \(\overline{\xi}\), there exists a \(\rho > 0\) such that
 \[
--\delta < \psi, \xi < \delta
+-\delta < \psi, \xi < \delta, \quad \text{for} \quad 0 \leq r \leq \rho, \quad 0 \leq t \leq \tau.
 \]
-for \(0 \leq r \leq \rho\) and \(0 \leq t \leq \tau\). By the assumptions \(F(0) = 0\), and \(F\) is odd, increasing on \((-\delta,\delta)\), we must have
+By the assumptions \(F(0) = 0\), and \(F\) is odd, increasing on \((-\delta,\delta)\), we must have
 \begin{equation}
 \label{eq:near_positive}
 0 \leq \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}}, \quad (r, t) \in [0, \rho] \times [0, \tau].
 \end{equation}
-Choose any
+
+Next, to handle \(r\) away from \(\rho\), we choose any
 \[
 \lambda > \frac{1}{\rho^2} \operatorname{Lip} (F) > 0
 \]
@@ -196,11 +201,11 @@ Now we may define
 \[
 h = e^{-\lambda t} \varphi.
 \]
-and apply the usual contradiction argument as follows: The assumptions of the theorem give
+Note that \(\tau\) is given by assuming the theorem is false in \eqref{eq:false_claim} and \(\lambda\) depends on \(\tau\) through \(\rho\). We may now apply the usual contradiction argument as follows: The assumptions of the theorem give
 \[
 h(0, t) \leq 0, \quad h(1, t) \leq 0 \quad \text{and} \quad h(r, 0) \leq 0
 \]
-while claiming the conclusion of the theorem is false implies, by equation \eqref{eq:false_claim}, that
+while claiming the conclusion of the theorem is false implies, by equation \eqref{eq:false_claim} that
 \[
 \sup \{h(r, t) : 0 \leq r \leq 1, 0 \leq t \leq \tau\} > 0.
 \]
@@ -213,7 +218,7 @@ Let \((r_0, t_0) \in (0, 1) \times (0, \tau]\) realise the supremum. Computing, 
 &= h_{rr} + \frac{C}{r} h_r - \left(\lambda + \frac{1}{r^2} \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}}\right) h.
 \end{split}
 \]
-At \((r_0, t_0)\) realising the supremum, \(h(r_0, t_0) > 0\), and hence
+At \((r_0, t_0)\), \(h(r_0, t_0) > 0\), and hence
 \[
 \lambda + \frac{1}{r^2} \frac{F(\psi) - F(\overline{\xi})}{\psi - \overline{\xi}} \leq \frac{1}{h} \left(h_{rr} + \frac{C}{r} h_r - \partial_t h\right) \leq 0.
 \]
@@ -243,7 +248,7 @@ With our choice of \(\psi\),
 \[
 \partial_t \psi = 0
 \]
-while
+and the spatial part is a second order, linear Euler equation:
 \[
 \psi_{rr} + \frac{C}{r} \psi_r - \frac{1}{r^2} F(\psi) = \left[\beta(\beta-1) + C \beta - A\right]r^{\beta-2}.
 \]
@@ -251,14 +256,12 @@ Thus \(\psi = r^{\beta}\) is a
 \begin{equation}
 \label{eq:betasubsuper}
 \begin{cases}
-\text{sub-solution if } & \beta(\beta-1) + C \beta - A \geq 0, \\
-\text{solution if } & \beta(\beta-1) + C \beta - A = 0, \\
-\text{super-solution if } & \beta(\beta-1) + C \beta - A \leq 0.
+\text{sub-solution if } & \beta^2 + (C - 1) \beta - A \geq 0, \\
+\text{solution if } & \beta^2 + (C - 1) \beta - A = 0, \\
+\text{super-solution if } & \beta^2 + (C - 1) \beta - A \leq 0.
 \end{cases}
 \end{equation}
 In conjunction with the comparison principle, sub-solutions are used to show blow up while super-super solutions are used to show no blow-up occurs. A solution may of course be used for either purpose.
-
-Recall our boundary condition \(\psi(0, t) = 0\) which rules out the usefulness of \(\beta \leq 0\). The range \(0 < \beta < 1\) models \(C^1\) blow up while \(1 \leq \beta\) models no \(C^1\) blow up. The range \(1 < \beta < 2\) models \(C^2\) blow up and \(\beta \geq 2\) has no \(C^2\) blow up. Since our equation is second order, we typically are only interested in up-to-\(C^2\) blow up.
 
 Therefore, for fixed \(C > 0\) and \(A > 0\) we are interested in the roots of
 \[
@@ -266,21 +269,37 @@ p(\beta) = \beta^2 + (C - 1) \beta - A.
 \]
 The discriminant is
 \[
-\Delta = (C-1)^2 + 4 A > 0
+\Delta = (C-1)^2 + 4 A > 0,
 \]
-and so we always have real, distinct roots \(\beta_1 < \beta_2\) given by
+so we always have real, distinct roots
 \[
 \frac{1 - C}{2} \pm \frac{1}{2} \sqrt{(C-1)^2 + 4 A}.
 \]
-From \eqref{eq:betasubsuper}, we have \(p(\beta) < 0\) for \(\beta_1 < \beta < \beta_2\) corresponding to super-solutions, whereas \(p(\beta) > 0\) for \(\beta < \beta_2\) and for \(\beta > \beta_1\) corresponding to sub-solutions. Then large \(\beta\) always produces sub-solutions with no blow up but this has no significance. If \(\beta_2 < 1\), then we find a range of \(\beta \in (0, 1)\) giving blowing up sub-solutions. If \(\beta_1 > 1\), then we find a range \(\beta > 1\) giving super-solutions with out blow up.
+Notice that since \(A > 0\),
+\[
+\frac{1}{2} \sqrt{(C-1)^2 + 4 A} > \left|\frac{1-C}{2}\right|
+\]
+hence one root is negative which is of no interest to us because of our boundary condition \(\psi(0, t) = 0\), and the other root is positive. Let us set
+\[
+\beta_0 = \frac{1 - C}{2} + \frac{1}{2} \sqrt{(C-1)^2 + 4 A} > 0.
+\]
+Then we have \(0 < \beta \leq \beta_0\) corresponds to super-solutions while \(\beta_0 \leq \beta\) corresponds to sub-solutions.
 
-It's particularly instructive to consider the critical cases of two-dimensional harmonic map heat flow and four-dimensional Yang-Mills flow. In both cases \(C = 1\). In higher dimensions, \(C > 1\). Thus in the critical dimension,
+We have
+\[
+\psi = r^{\beta}, \quad \psi' = \beta r^{\beta-1}, \quad \psi'' = \beta(\beta-1) r^{\beta - 2}.
+\]
+Thus if \(0 < \beta_0 < 1\) we obtain sub-solutions \(r^{\beta}, \beta_0 \leq \beta < 1\) with \(C^1\) blow up at the origin. If \(\beta_0 > 1\), we obtain super-solutions \(r^{\beta}, \beta_0 \leq \beta < 1\) with no \(C^1\) blow up at the origin. Similarly \(0 < \beta_0 < 2\) gives sub-solutions with \(C^2\) blow up while \(2 < \beta_0\) gives super-solutions with no \(C^2\) blow up. It turns out the boundary cases \(\beta_0 = 1, 2\) may be perturbed by a time-dependent factor to induce blow up.
+
+\subsubsection*{Example: Critical Dimension}
+
+It's particularly instructive to consider the critical cases of two-dimensional harmonic map heat flow and four-dimensional Yang-Mills flow. In both cases \(C = 1\) (whereas in higher dimension \(C > 1\)). Thus in the critical dimension,
 \[
 p(\beta) = \beta^2 - A
 \]
-hence \(\beta_1 = - \sqrt{A}\) and \(\beta_2 = \sqrt{A}\).
+hence \(\beta_0 = \sqrt{A}\).
 
-For the degree \(\ell\)-harmonic map heat flow, \(A = \ell^2\) while for the Yang-Mills flow, \(A = 4\). Then for degree \(1\)-harmonic map heat flow, \(\beta_2 = 1\) lies on the boundary of \(C^1\) blow up, and it turns out this may be perturbed by a time-dependent term to induce blow up. For degree \(\ell\) harmonic map heat flow and for Yang Mills flow \(\beta_2 = 2\) and no \(C^1\) blow up occurs but again a time-dependent perturbation induces \(C^2\) blow up. Higher degree harmonic map heat flow does not undergo \(C^2\) blow up. Full details are given below.
+For the degree \(\ell\)-harmonic map heat flow, \(A = \ell^2\) while for the Yang-Mills flow, \(A = 4\). Thus for Yang-Mills and higher degree harmonic map heat flow (\(\ell > 1\)), we have \(\beta_0 > 1\) and no \(C^1\) blow up occurs. However for, \(\ell \leq 4\) and Yang-Mills we do expect \(C^2\) blow up. For \(\ell > 4\), there is no \(C^2\) blow up.
 
 \subsection*{Blow up at the origin}
 
@@ -290,7 +309,7 @@ With our heuristic motivation to hand, we move on to show that blow up, if it oc
 \label{lem:apriori_bounds}
 Let \(\psi\) be a solution of \eqref{eq:pde} with initial data \(\psi_0\) satisfying
 \[
-\|\psi_0\|_{C^{2,\alpha}([0, 1] \times [0, \tau])} < \infty
+\|\psi_0\|_{C^{2,\alpha}([0, 1])} < \infty
 \]
 If in addition,
 \[
@@ -381,25 +400,46 @@ Multiplying by \(\zeta'\) this becomes
 \]
 Integrating gives
 \[
-(\zeta')^2 = 2\beta^{-2} G(\zeta) + C_1, \quad \text{where} \quad G'(Z) = F(Z).
+(\zeta')^2 = G(\zeta) + C_1, \quad \text{where} \quad G'(Z) = 2\beta^{-2} F(Z).
 \]
 Thus we must solve
 \[
-\frac{\zeta'}{\sqrt{2\beta^{-1} G(\zeta) + C_1}} = 1
+\frac{\zeta'}{\sqrt{G(\zeta) + C_1}} = 1
 \]
 and hence our solution satisfies
 \[
-H_{C_1} (\zeta(w)) = w, \quad \text{where} \quad H_{C_1} (0) = -\infty \quad \text{and} \quad H_{C_1}'(Z) = \frac{1}{\sqrt{2\beta^{-1} G(Z) + C_1}}.
+H_{C_1} (\zeta(w)) = w, \quad \text{where} \quad H_{C_1} (0) = -\infty \quad \text{and} \quad H_{C_1}'(Z) = \frac{1}{\sqrt{G(Z) + C_1}}.
 \]
-In terms of \(\xi_0\),
+In terms of \(\xi\),
 \[
-H_{C_1} (\xi_0(y)) = \ln y,
+H_{C_1} (\xi(r, t)) = H_{C_1} (\xi_0(r^{\beta})) = \ln r^{\beta},
 \]
 and if \(H_{C_1}\) is invertible,
 \[
-\xi_0(y) = H_{C_1}^{-1} (\ln y).
+\xi(r, t) = H_{C_1}^{-1} (\ln r^{\beta}).
 \]
 
+\subsubsection*{Example: Harmonic map heat flow in \(\S^2\)}
+
+Here we have
+\[
+F(Z) = \frac{\ell^2}{2} \sin(2Z)
+\]
+so that
+\[
+G(Z) = \frac{\ell^2}{\beta^2} \sin^2(Z)
+\]
+and
+\[
+H(Z) = \frac{1}{2} \ln \left(\frac{\cos(Z) - 1}{\cos(Z) + 1}\right)
+\]
+
+\subsubsection*{Example: Harmonic map heat flow in warped products}
+
+Here \(F = \ell^2 uu' = \tfrac{\ell^2}{2} (u^2)'\) and so
+\[
+G = \frac{\ell^2}{\beta^2} u^2.
+\]
 \subsection*{Stationary solutions for arbitrary \(C\)}
 
 Our stationary solutions satisfy
@@ -418,8 +458,9 @@ v \\
 \frac{1}{r^2} F(u) - \frac{C}{r} v
 \end{pmatrix}.
 \]
-The right hand side is a continuous function of \((u,v)\) (in fact Lipschitz since \(F\) is Lipschitz) for each fixed \(r > 0\) and is continuous in \(r > 0\) for each fixed \((u, v)\) but only measureable for \(r \in [0, 1]\). The Cartheodary theorem guarantees a \(\rho_1 > 0\) and a unique solution on \([0, \rho_2]\) (in \(W^{1,1}\)) given any initial condition \((u_0, v_0)\) at \(r=0\). (\textbf{is this true? Do I need the right hand side to be continuous in \((u,v)\) when \(r=0\)?}). But for any \(\rho_2 \in (0, \rho_1)\), the right hand side is uniformly Lipschitz in \((u, v)\) hence the Peano theorem gives a unique \(C^2\) solution on \([\rho_2, 1]\) given the data \((u(\rho_2), v(\rho_2))\) which must also agree with the solution obtained from the Cartheodary theorem on \([0, \rho_1]\).
+The right hand side is a continuous function of \((u,v)\) (in fact Lipschitz since \(F\) is Lipschitz) for each fixed \(r > 0\) and is continuous in \(r > 0\) for each fixed \((u, v)\) but only measureable for \(r \in [0, 1]\). The Cartheodary theorem guarantees the existence of an absolutely continuous solution \((u, v)\) on \([0, \rho_1)\) for some  \(\rho_1 > 0\) given any initial condition \((u_0, v_0)\) at \(r=0\). But for any \(\rho_2 \in (0, \rho_1)\), the right hand side is uniformly Lipschitz in \((u, v)\) hence the Picard-Lindel\"of theorem gives a unique \(C^2\) solution on \([\rho_2, 1]\) given the data \((u(\rho_2), v(\rho_2))\) which must also agree on \((0, \rho_1]\) with the solution obtained from the Cartheodary theorem. Since this is true for any \(\rho_2\), given any initial data \((\psi(0), \psi'(0))\), there exists a \(C^2\) solution on \((0, 1)\).
 
-Therefore, there is a unique stationary solution \(\xi\) given any \(\xi(0), \xi_r(0)\) and hence a one-parameter family of stationary solutions with \(\xi(0) = 0\), uniquely determined by \(\xi'(0)\).
+For our purposes, we take \(\psi(0) = 0\) and so we obtain a one-parameter family of solutions, parametrised by \(\psi'(0)\).
 
+\textbf{I guess we also want to prescribe \(\psi(1)\) so work out what this does to \(\psi'(0)\).}
 \end{document}
